add FormatEvaluatorFactoryTest